--- a/index.html
+++ b/index.html
@@ -1,17 +1,327 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="bootstrap.css" />
-
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 </head>
-
 <body>
 
 
 
-  </body>
-  </html>
+  
+<!--------------------------NAVBAR----------------------->  
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Kit UI</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarColor03">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="navbar.html">Navbar <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="footer.html">Footer</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="form.html">Formulaires</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="ban.html">Bannière</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="card.html">Cartes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="comment.html">Commentaires</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="element.html">Élément</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="paiement.html">Paiement</a>
+      </li>
+    </ul>
+    
+  </div>
+</nav>
+
+<!--------------------------BUTTONS----------------------->  
+
+
+<br>
+<br>
+<h1> Boutons</h1>
+<br>
+<div>
+  <button type="button" class=" btn btn-primary">Primary</button>
+  <button type="button" class=" btn btn-warning">Warning</button>
+  <button type="button" class=" btn btn-danger">Danger</button>
+  <button type="button" class=" btn btn-success">Success</button>
+  <button type="button" class=" btn btn-info">Info</button> 
+</div>
+
+<br>
+<br>
+
+<div>
+  <button type="button" class="btn btn-outline-primary">Primary</button>
+  <button type="button" class=" btn btn-outline-warning">Warning</button>
+  <button type="button" class=" btn btn-outline-danger">Danger</button>
+  <button type="button" class=" btn btn-outline-success">Success</button>
+  <button type="button" class=" btn btn-outline-info">Info</button>
+
+
+</div>
+
+<br>
+<br>
+
+<div>
+  <button type="button" class="btn btn-primary disabled">Primary</button>
+<button type="button" class="btn btn-secondary disabled">Secondary</button>
+<button type="button" class="btn btn-success disabled">Success</button>
+<button type="button" class="btn btn-info disabled">Info</button>
+<button type="button" class="btn btn-warning disabled">Warning</button>
+<button type="button" class="btn btn-danger disabled">Danger</button>
+<button type="button" class="btn btn-link disabled">Link</button>
+</div>
+
+<br>
+<br>
+
+<div>
+  <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+    <button type="button" class="btn btn-primary">Primary</button>
+    <div class="btn-group" role="group">
+      <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+      <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+        <a class="dropdown-item" href="#">Dropdown link</a>
+        <a class="dropdown-item" href="#">Dropdown link</a>
+      </div>
+    </div>
+  </div>
+  
+  <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+    <button type="button" class="btn btn-success">Success</button>
+    <div class="btn-group" role="group">
+      <button id="btnGroupDrop2" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+      <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
+        <a class="dropdown-item" href="#">Dropdown link</a>
+        <a class="dropdown-item" href="#">Dropdown link</a>
+      </div>
+    </div>
+  </div>
+  
+  <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+    <button type="button" class="btn btn-info">Info</button>
+    <div class="btn-group" role="group">
+      <button id="btnGroupDrop3" type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+      <div class="dropdown-menu" aria-labelledby="btnGroupDrop3">
+        <a class="dropdown-item" href="#">Dropdown link</a>
+        <a class="dropdown-item" href="#">Dropdown link</a>
+      </div>
+    </div>
+  </div>
+  
+  <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+    <button type="button" class="btn btn-danger">Danger</button>
+    <div class="btn-group" role="group">
+      <button id="btnGroupDrop4" type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+      <div class="dropdown-menu" aria-labelledby="btnGroupDrop4">
+        <a class="dropdown-item" href="#">Dropdown link</a>
+        <a class="dropdown-item" href="#">Dropdown link</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br>
+<br>
+
+<div>
+  <button type="button" class="btn btn-primary btn-lg">Large button</button>
+<button type="button" class="btn btn-primary">Default button</button>
+<button type="button" class="btn btn-primary btn-sm">Small button</button>
+</div>
+
+
+
+<!--------------------------TYPO----------------------->  
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+  <div class="row d-flex align-items-center">
+    <div class="col-4">
+  <h1>Typographie</h1>
+  <br>
+  <h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
+<h3>
+  Heading
+  <small class="text-muted">with muted text</small>
+</h3>
+<p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+</div>
+  <div class="col-4">
+    <h2>Emphasis classes</h2>
+<p class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+<p class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+<p class="text-secondary">Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+<p class="text-warning">Etiam porta sem malesuada magna mollis euismod.</p>
+<p class="text-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
+<p class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+<p class="text-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+  </div>
+</div>
+<br>
+<br>
+<div>
+    <h2>Blockquote</h2>
+    <blockquote class="blockquote">
+      <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+      <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+    </blockquote>
+  
+</div>
+
+<br>
+<br>
+
+<!--------------------------ALTERTS----------------------->  
+
+<div class="container">
+  <div class="row">
+    <h1>Alertes</h1>
+    <div class="alert alert-dismissible alert-warning">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <h4 class="alert-heading">Warning!</h4>
+      <p class="mb-0">Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna, <a href="#" class="alert-link">vel scelerisque nisl consectetur et</a>.</p>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <div class="alert alert-dismissible alert-danger">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
+        </div>
+    </div>
+    <div class="col-4">
+      <div class="alert alert-dismissible alert-success">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="alert alert-dismissible alert-info">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
+      </div>
+    </div>
+</div>
+  </div>
+  <div class="row">
+    <div class="col-4">
+
+      <div class="alert alert-dismissible alert-primary">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
+      </div>
+
+    </div>
+    <div class="col-4">
+      <div class="alert alert-dismissible alert-secondary">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="alert alert-dismissible alert-light">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
+      </div>    </div>
+  </div>
+</div>
+
+<br>
+<br>
+
+<!--------------------------BADGES----------------------->  
+
+  <h1>Badges</h1>
+  <div>
+  <span class="badge badge-primary">Primary</span>
+<span class="badge badge-secondary">Secondary</span>
+<span class="badge badge-success">Success</span>
+<span class="badge badge-danger">Danger</span>
+<span class="badge badge-warning">Warning</span>
+<span class="badge badge-info">Info</span>
+<span class="badge badge-light">Light</span>
+<span class="badge badge-dark">Dark</span>
+  
+</div>
+<br>
+
+<div>
+  <span class="badge badge-pill badge-primary">Primary</span>
+  <span class="badge badge-pill badge-secondary">Secondary</span>
+  <span class="badge badge-pill badge-success">Success</span>
+  <span class="badge badge-pill badge-danger">Danger</span>
+  <span class="badge badge-pill badge-warning">Warning</span>
+  <span class="badge badge-pill badge-info">Info</span>
+  <span class="badge badge-pill badge-light">Light</span>
+  <span class="badge badge-pill badge-dark">Dark</span>
+</div>
+
+<br>
+<br>
+
+<h1>Icônes</h1>
+<div class="logo">
+  <i class="far fa-calendar-alt"></i>
+  <i class="fas fa-plus-square"></i>
+  <i class="fab fa-facebook-square"></i>
+  <i class="fab fa-twitter-square"></i>
+  <i class="fab fa-whatsapp-square"></i>
+</div>
+
+<br>
+<br>
+
+<div>
+  <h1>Checkboxes</h1>
+<fieldset class="form-group">
+  
+  <div class="form-check">
+    <label class="form-check-label">
+      <input class="form-check-input" type="checkbox" value="" checked="">
+      Activé/Désactivé
+    </label>
+  </div>
+  <div class="form-check disabled">
+    <label class="form-check-label">
+      <input class="form-check-input" type="checkbox" value="" disabled="">
+      Désactivé
+    </label>
+  </div>
+</fieldset>
+  </div>
+
+  
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</html>
